--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.serenitybdd.starter</groupId>
     <artifactId>cucumber-starter</artifactId>
@@ -15,12 +15,10 @@
         <junit-vintage-engine.version>5.10.1</junit-vintage-engine.version>
         <junit-platform-suite.version>1.10.1</junit-platform-suite.version>
         <cucumber-junit-platform-engine.version>7.15.0</cucumber-junit-platform-engine.version>
-        <encoding>UTF-8</encoding>
-        <tags></tags>
-        <webdriver.base.url></webdriver.base.url>
-<!--        <webdriver.base.url>C:\Users\soman\Software\chromedriver-win64\chromedriver-win64\chromedriver.exe</webdriver.base.url>-->
-<!--        <webdriver.base.url>C:\Users\soman\Software\edgedriver_win64\msedgedriver.exe</webdriver.base.url>-->
+        <maven.compiler.source>11</maven.compiler.source> <!-- Update this to your JDK version -->
+        <maven.compiler.target>11</maven.compiler.target> <!-- Update this to your JDK version -->
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -100,9 +98,14 @@
             <version>1.2.10</version>
         </dependency>
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.17.0</version> <!-- or any other compatible version -->
+            <version>2.17.0</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -111,6 +114,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -121,7 +125,7 @@
                     <sourceDirectory>${project.basedir}/src/main/resources/schema</sourceDirectory>
                     <targetPackage>com.example.generated</targetPackage>
                     <sourceType>json</sourceType>
-                    <!-- Add other configurations if needed -->
+                    <useJsr305Annotations>true</useJsr305Annotations> <!-- Use JSR-305 annotations instead of javax -->
                 </configuration>
                 <executions>
                     <execution>
@@ -170,8 +174,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
             <plugin>
